--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-json-db",
-  "version": "1.0.3",
-  "description": "JsonDB is a small and open source project which is usable for JS developers. You can stay your DB in a json file easily with this package.",
+  "version": "1.0.4",
+  "description": "JsonDB is a small and open source project which is usable for JS developers. You can store your DB in a json file easily with this package.",
   "main": "jsonDB.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
