--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "js-json-db",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "JsonDB is a small and open source project which is usable for JS developers. You can store your DB in a json file easily with this package.",
     "main": "jsonDB.js",
     "scripts": {
@@ -17,7 +17,7 @@
         "json-database"
     ],
     "author": "Ahmet Buğra Çakıcı",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/ahmetbcakici/js-json-db/issues"
     },
